# ai-assist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PRD.md  README.md  USER.md  WORKER.md  deploy-ios.sh  dev-loop.sh  dev.sh  flood_cards.sh  joey_bachelor_flight_research_summary.md  joey_bachelor_party_flights.md  joey_flight_options_final.md  joey_flight_research_summary.md  joey_flight_search_plan.md  joey_message.txt  pull-from-studio.sh  seed.sh  sync-to-laptop.sh
docs/: agent-loop-architecture.md  agent-loop-viewer.html  architecture.html
docs/features/: _index.md  dev-mode-server-prompt.md  next-steps-approval-queue.md  task-deliverables.md  todo-agent-workflow.md  voice-recording.md
ios/: Package.swift
src/: config.rs  context.rs  db.rs  error.rs  extensions.rs  lib.rs  main.rs  safety.rs  util.rs  workspace.rs
src/agent/: agent_loop.rs  agent_queue.rs  approval.rs  commands.rs  mod.rs  routine.rs  routine_engine.rs  session.rs  submission.rs  todo_agent.rs  tool_executor.rs
src/cards/: builder.rs  choice_registry.rs  generator.rs  handler.rs  mod.rs  model.rs  queue.rs  reply_drafter.rs  ws.rs
src/channels/: channel.rs  cli.rs  email.rs  email_poller.rs  email_tests.rs  email_types.rs  ios.rs  manager.rs  mod.rs  telegram.rs  todo_channel.rs
src/documents/: mod.rs  model.rs  routes.rs
src/llm/: failover.rs  mod.rs  provider.rs  reasoning.rs  retry.rs  rig_adapter.rs
src/logging/: agent_logger.rs  mod.rs
src/onboarding/: manager.rs  mod.rs  model.rs  prompts.rs  routes.rs  state.rs
src/pipeline/: email_processor.rs  mod.rs  processor.rs  rules.rs  types.rs
src/store/: cards.rs  db.rs  libsql_backend.rs  messages.rs  migrations.rs  mod.rs  traits.rs
src/todos/: activity.rs  approval_registry.rs  mod.rs  (+3 more)
tests/: card_ws_integration.rs
(+91 files in other folders)
