[package]
name = "ai-assist"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
rust_decimal_macros = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = "0.30"
regex = "1"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11"
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"
